--- a/pages/page2.html
+++ b/pages/page2.html
@@ -7,10 +7,16 @@
 
 <body>
     <a href="index.html"><img src="http://source.unsplash.com/random" width="150" alt="unsplash random"></a>
+    <div class="container">
+        <div class="nav">
+            <a href="/index.html">Home</a>
+        </div>
+        <div class="jumbotron">
+            <a href="/about.html" alt="about">About</a>
+            <a href="/pages/page1.html">Page1</a>
+            <a href="/pages/page2.html">Page2</a>
+        </div>
+    </div>
     <h1>Page2</h1>
-    <a href="/index.html">Home</a>
-    <a href="/about.html">About</a>
-    <a href="pages/page1.html">Page1</a>
-    <a href="pages/page2.html">Page2</a>
 </body>
 </html>
