--- a/about.html
+++ b/about.html
@@ -8,10 +8,17 @@
 
 <body>
     <a href="index.html"><img src="http://source.unsplash.com/random" width="150" alt="unsplash random"></a>
-    <a href="/index.html">Home</a>
-    <a href="/about.html" alt="about">About</a>
-    <a href="/pages/page1.html">Page1</a>
-    <a href="/pages/page2.html">Page2</a>
+    <div class="container">
+        <div class="nav">
+            <a href="/index.html">Home</a>
+        </div>
+        <div class="jumbotron">
+            <a href="/about.html" alt="about">About</a>
+            <a href="/pages/page1.html">Page1</a>
+            <a href="/pages/page2.html">Page2</a>
+        </div>
+    </div>
+    <br>
     <h1>About</h1>
 
 
