day6-test for row/col

--- a/index.html
+++ b/index.html
@@ -3,28 +3,49 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Home</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="renderer" content="webkit">
+    <link rel="stylesheet" href="grid.css">
+    <link rel="stylesheet" href="style.css">
+    <title>title</title>
 </head>
 
 <body>
-    <a href="index.html"><img src="http://source.unsplash.com/random" width="150" alt="unsplash random"></a>
-    <div class="container">
-        <div class="nav">
-            <a href="/index.html">Home</a>
+    <header>
+    </header>
+    <section>
+        <div class="row">
+            <div class="col-sm-12 col-md-12 col-lg-12">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos nesciunt laborum expedita veritatis sapiente a quae magnam ipsam debitis! Adipisci ut repudiandae ipsam nam quam, distinctio, sint eius cupiditate fugit.</p>
+            </div>
         </div>
-        <div class="jumbotron">
-            <a href="/about.html" alt="about">About</a>
-            <a href="/pages/page1.html">Page1</a>
-            <a href="/pages/page2.html">Page2</a>
+    </section>
+    <section>
+        <div class="row">
+            <div class="col-sm-12 col-md-12 col-lg-12">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates dicta repudiandae, id possimus, sed veniam nesciunt doloremque quia enim ullam rem! Dolore, eaque ullam ut delectus sapiente pariatur praesentium necessitatibus.
+            </div>
         </div>
-    </div>
-    <h1>Home</h1>
-    <br>
-    <br>
-    <img src="http://placehold.it/350x150">
-    <img src="http://placehold.it/60x60">
-    <br>
-    <img src="http://placehold.it/720X480">
+    </section>
+    <section>
+        <div class="row">
+            <div class="row">
+                <div class="col-sm-4 col-md-4 col-lg-4 test-img">
+                    <img src="p3.jpg" alt="unsplash building"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis doloribus velit neque vel soluta accusantium cum quidem veniam, quo vero corporis, possimus, quis quos ducimus, ratione ad numquam! Repudiandae, obcaecati.
+                </div>
+                <div class="col-sm-4 col-md-4 col-lg-4 test-img">
+                    <img src="p2.png" alt="unsplash building"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore odio laborum maiores, quasi nisi a beatae cumque suscipit hic, deserunt officiis explicabo cum temporibus voluptates vel illo vitae! Quae, error?
+                </div>
+                <div class="col-sm-4 col-md-4 col-lg-4 test-img">
+                    <img src="p1.jpg" alt="unsplash building"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi quam, vitae, necessitatibus delectus earum reiciendis consectetur soluta. Accusantium rem eveniet soluta, doloremque in officiis minus deleniti reprehenderit, eligendi itaque ab.
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer>
+
+    </footer>
 </body>
 
 </html>
