--- a/pages/life.html
+++ b/pages/life.html
@@ -46,7 +46,7 @@
                             <img src="/photo/life/1.jpg" alt="">
                             <div class="caption">
                                 <h3>路跑粉絲</h3>
-                                <p>2011年部隊中繪畫比賽時以蘆溝橋事變為故事背景的手繪作品。</p>
+                                <p>2018年新加坡渣打路跑留念。</p>
                             </div>
                         </div>
                     </div>
