--- a/pages/skill.html
+++ b/pages/skill.html
@@ -532,7 +532,9 @@
                         <div class="skill-info">
                             <h3>March 2015 - August 2015 </h3>
                             <h2>GunFu</h2>
-                            <p>MCU embedded system develop focus on automotive product project management, development, HUD technology development and car alarm lock .</p>
+                            <p>MCU embedded system develop focus on automotive product project management, 
+                                development, 
+                                HUD technology development and car alarm lock .</p>
                         </div>
                     </div>
                 </div>
@@ -547,9 +549,12 @@
                     </div>
                     <div class="col-6">
                         <div class="skill-info">
-                            <h3>December 2015 - Now </h3>
+                            <h3>December 2015 - May 2019</h3>
                             <h2>LITEON</h2>
-                            <p>Develop Linux virtual file system, TCP/IP application, CD/DVD detect application, Burn-In application for WiFi ODD.</p>
+                            <p>Develop Linux virtual file system, 
+                                TCP/IP application, CD/DVD detect application, 
+                                Burn-In application for WiFi ODD.
+                            </p>
                         </div>
                     </div>
                 </div>
