--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/css/mybootstrap.css">
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/tiles.css">
-    <link rel="stylesheet" href="/css/style-tiles.css">
+    <link rel="stylesheet" href="./css/mybootstrap.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/tiles.css">
+    <link rel="stylesheet" href="./css/style-tiles.css">
     <title>Home Page</title>
 </head>
 
