--- a/index.html
+++ b/index.html
@@ -490,9 +490,9 @@
                 </div>
             </div>
             <div id="container-bar" class="container-bar">
-                <div class="dragger-container">
+                <div id="dragger-container" class="dragger-container">
                     <div id="dragger-vertical" class="dragger-vertical">
-                        <div class="dragger-bar"></div>
+                        <div id="dragger-vertical-body" class="dragger-bar"></div>
                     </div>
                 </div>
                 <div class="scroll-tools"></div>
