--- a/index.html
+++ b/index.html
@@ -224,8 +224,10 @@
                                     <div class="number-line"></div>
                                     <div class="exp-box">
                                         <div class="item-num">1</div>
+                                        <div class="logo-group">
                                         <h5 class="company">LITE-ON Singapore PTE LTD</h5>
-                                        <div class="logo"></div>
+                                        <div class="logo liteon"></div>
+                                        </div>
                                         <h6>
                                             <span class="title">Senior Engineer</span>
                                             <span class="exp-start">May 2018</span>
@@ -252,8 +254,10 @@
                                     </div>
                                     <div class="exp-box">
                                         <div class="item-num">2</div>
+                                        <div class="logo-group">
                                         <h5 class="company">LITE-ON Technology</h5>
-                                        <div class="logo"></div>
+                                        <div class="logo liteon"></div>
+                                        </div>
                                         <h6>
                                             <span class="title">Senior Engineer</span>
                                             <span class="exp-start">Dec 2015</span>
@@ -296,8 +300,10 @@
                                     </div>
                                     <div class="exp-box">
                                         <div class="item-num">3</div>
+                                        <div class="logo-group">
                                         <h5 class="company">Gun Fu Technology</h5>
-                                        <div class="logo"></div>
+                                        <div class="logo gunfu"></div>
+                                        </div>
                                         <h6>
                                             <span class="title">Automotive R&D Team Manager</span>
                                             <span class="exp-start">Mar 2015</span>
@@ -319,8 +325,10 @@
                                     </div>
                                     <div class="exp-box">
                                         <div class="item-num">4</div>
+                                        <div class="logo-group">
                                         <h5 class="company">Ligitek</h5>
-                                        <div class="logo"></div>
+                                        <div class="logo ligitek"></div>
+                                        </div>
                                         <h6>
                                             <span class="title">Automotive Firmware Engineer</span>
                                             <span class="exp-start">Mar 2013</span>
@@ -363,8 +371,10 @@
                                     </div>
                                     <div class="exp-box">
                                         <div class="item-num">5</div>
+                                        <div class="logo-group">
                                         <h5 class="company">Wintec</h5>
-                                        <div class="logo"></div>
+                                        <div class="logo wintec"></div>
+                                        </div>
                                         <h6>
                                             <span class="title">Automotive Firmware Engineer</span>
                                             <span class="exp-start">Oct 2012</span>
@@ -400,8 +410,10 @@
                                     <div class="number-line edu"></div>
                                     <div class="exp-box">
                                         <div class="item-num edu">1</div>
+                                        <div class="logo-group">
                                         <h5 class="education">Institute for Information Industry, 資策會</h5>
-                                        <div class="logo"></div>
+                                        <div class="logo iii"></div>
+                                        </div>
                                         <h6>
                                             <span class="title">Embedded Linux Training</span>
                                             <span class="exp-start">2015.9</span>
@@ -421,8 +433,10 @@
                                     </div>
                                     <div class="exp-box">
                                         <div class="item-num edu">2</div>
+                                        <div class="logo-group">
                                         <h5 class="education">National Chi Nan University, 曁南大學</h5>
-                                        <div class="logo"></div>
+                                        <div class="logo ncnu"></div>
+                                        </div>
                                         <h6>
                                             <span class="title">Master degree</span>
                                             <span class="exp-start">2009</span>
@@ -442,8 +456,10 @@
                                     </div>
                                     <div class="exp-box">
                                         <div class="item-num edu">3</div>
+                                        <div class="logo-group">
                                         <h5 class="education">Southern Taiwan University of Science and Technology, 南台科大</h5>
-                                        <div class="logo"></div>
+                                        <div class="logo stust"></div>
+                                        </div>
                                         <h6>
                                             <span class="title">Bachelor Degree</span>
                                             <span class="exp-start">2005</span>
@@ -464,7 +480,6 @@
                                     <div class="exp-box">
                                         <div class="item-num edu">4</div>
                                         <h5 class="education">High School</h5>
-                                        <div class="logo"></div>
                                         <h6>
                                             <span class="title">Vocational college</span>
                                             <span class="exp-start">2002</span>
