[Update] Job information
Field:
	Job is in 2020

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                             <div class="about-item rgba-complement-0">3y+ Automotive MCU</div>
                         </div>
                         <div class="about-description">
-                        <p>7 years product development experience, 3+ in MCU Dev and 3+ in Embedded Linux Dev.
+                        <p>Product development experience 7 years, 3+ in MCU Dev and 3+ in Embedded Linux Dev.
                         Willing to embrace any kind of challenge and finding ways out to solve problems.
                         Love all the technical things in the world.</p>
                         </div>
@@ -86,6 +86,20 @@
                                     Proven ability in optimizing embedded system functionality that improves workflow efficiencies of the system.</p>
                             </div>
                             <div class="skill-list">
+                                <div class="skill-item full-type">
+                                    <i class="fab fa-android"></i>  
+                                    <h5>Android Linux Development</h5>
+                                    <div class="skill-content">
+                                        <li>
+                                            <h6 class="skill-content-item">Android linux display driver porting/debuging</h6>
+                                            <span class="bar"><span class="hidden-familiar"></span></span>
+                                        </li>
+                                        <li>
+                                            <h6 class="skill-content-item">Android linux touch screen driver porting/debuging</h6>
+                                            <span class="bar"><span class="hidden-junior"></span></span>
+                                        </li>
+                                    </div>
+                                </div>
                                 <div class="skill-item">    
                                     <i class="fab fa-linux"></i>
                                     <h5>Embedded Linux Development</h5>
@@ -225,6 +239,36 @@
                                     <div class="exp-box">
                                         <div class="item-num">1</div>
                                         <div class="logo-group">
+                                        <h5 class="company">FIH Mobile Limited</h5>
+                                        <div class="logo foxconn"></div>
+                                        </div>
+                                        <h6>
+                                            <span class="title">Senior Engineer</span>
+                                            <span class="exp-start">Dec 2019</span>
+                                            <span class="exp-end">Now</span>
+                                        </h6>
+                                        <div class="exp-session">
+                                            <div class="job-descript">Archive Linux Display Porting</div>
+                                            <h6 class="job-exp-time">
+                                                <span class="job-start">2019.12</span>
+                                                <span class="job-end">now</span>
+                                            </h6>
+                                            <p class="descript-text">
+                                                <h5 class="text-session">
+                                                <span class="role">Individual weight for the team</span>
+                                                <span class="content">10%</span>
+                                                </h5>
+                                                <h5 class="text-session">
+                                                <span class="content">Display owner</span>
+                                                <span class="content">Product upgrade Android system version where I maintain display driver.</span>
+                                                </h5>                                
+                                            </p>
+                                        </div>
+                                    </div>
+                                    <div class="number-line"></div>
+                                    <div class="exp-box">
+                                        <div class="item-num">2</div>
+                                        <div class="logo-group">
                                         <h5 class="company">LITE-ON Singapore PTE LTD</h5>
                                         <div class="logo liteon"></div>
                                         </div>
@@ -253,7 +297,7 @@
                                         </div>
                                     </div>
                                     <div class="exp-box">
-                                        <div class="item-num">2</div>
+                                        <div class="item-num">3</div>
                                         <div class="logo-group">
                                         <h5 class="company">LITE-ON Technology</h5>
                                         <div class="logo liteon"></div>
@@ -299,7 +343,7 @@
                                         </div>
                                     </div>
                                     <div class="exp-box">
-                                        <div class="item-num">3</div>
+                                        <div class="item-num">4</div>
                                         <div class="logo-group">
                                         <h5 class="company">Gun Fu Technology</h5>
                                         <div class="logo gunfu"></div>
@@ -324,7 +368,7 @@
                                         </div>
                                     </div>
                                     <div class="exp-box">
-                                        <div class="item-num">4</div>
+                                        <div class="item-num">5</div>
                                         <div class="logo-group">
                                         <h5 class="company">Ligitek</h5>
                                         <div class="logo ligitek"></div>
@@ -370,7 +414,7 @@
                                         </div>
                                     </div>
                                     <div class="exp-box">
-                                        <div class="item-num">5</div>
+                                        <div class="item-num">6</div>
                                         <div class="logo-group">
                                         <h5 class="company">Wintec</h5>
                                         <div class="logo wintec"></div>
