[issue] error content fix

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                                             <span class="exp-end">Now</span>
                                         </h6>
                                         <div class="exp-session">
-                                            <div class="job-descript">Archive Linux Display Porting</div>
+                                            <div class="job-descript">Android Linux Display Porting</div>
                                             <h6 class="job-exp-time">
                                                 <span class="job-start">2019.12</span>
                                                 <span class="job-end">now</span>
