[Modify] my skill contant

--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
                                 <h3 class="title">My Skill</h3>
                             </div>
                             <div class="skill-description">
-                                <p>Product Developer with 7 years of experience in designing and developing system integration,
-                                    system structure, testing, debugging, problem-solving, and training staff within embedded technologies.
+                                <p>I am a Product Developer who experience in designing and developing system integration,
+                                    system structure, testing, debugging, problem-solving, and training staff within embedded technologies. 
                                     Proven ability in optimizing embedded system functionality that improves workflow efficiencies of the system.</p>
                             </div>
                             <div class="skill-list">
