New update: add IoT information

--- a/index.html
+++ b/index.html
@@ -65,13 +65,14 @@
                         </header>
                         <div class="about leo-block">
                         <div class="about-list">
-                            <div class="about-item rgba-complement-0">Product Developer</div>
+                            <div class="about-item rgba-complement-0">Product Developer & System Integration</div>
+                            <div class="about-item rgba-complement-0">1y+ IoT</div>
                             <div class="about-item rgba-complement-0">1y+ Full-stack</div>
                             <div class="about-item rgba-complement-0">3y+ Embedded Linux</div>
                             <div class="about-item rgba-complement-0">3y+ Automotive MCU</div>
                         </div>
                         <div class="about-description">
-                        <p>Product development experience 7 years, 3+ in MCU Dev and 3+ in Embedded Linux Dev.
+                        <p>Product development experience 8 years, 1+ in IoT Dev, 1+ in Full-stack Dev, 3+ in Automotive Dev and 3+ in Embedded Linux Dev.
                         Willing to embrace any kind of challenge and finding ways out to solve problems.
                         Love all the technical things in the world.</p>
                         </div>
@@ -81,12 +82,26 @@
                                 <h3 class="title">My Skill</h3>
                             </div>
                             <div class="skill-description">
-                                <p>I am a Product Developer who experience in designing and developing system integration,
+                                <p>I am a product developer and system integrater who experience in designing and developing system integration,
                                     system structure, testing, debugging, problem-solving, and training staff within embedded technologies. 
                                     Proven ability in optimizing embedded system functionality that improves workflow efficiencies of the system.</p>
                             </div>
                             <div class="skill-list">
-                                <div class="skill-item full-type">
+                                <div class="skill-item"> 
+                                    <i class="fas fa-wifi"></i>
+                                    <h5>IoT</h5>
+                                    <div class="skill-content">
+                                        <li>
+                                            <h6 class="skill-content-item">BLE 5.2 application develope based on microcontroller</h6>
+                                            <span class="bar"><span class="hidden-expert"></span></span>
+                                        </li>
+                                        <li>
+                                            <h6 class="skill-content-item">Power consumption design in software</h6>
+                                            <span class="bar"><span class="hidden-familiar"></span></span>
+                                        </li>
+                                    </div>
+                                </div>
+                                <div class="skill-item">
                                     <i class="fab fa-android"></i>  
                                     <h5>Android Linux Development</h5>
                                     <div class="skill-content">
@@ -248,10 +263,44 @@
                                             <span class="exp-end">Now</span>
                                         </h6>
                                         <div class="exp-session">
+                                            <div class="job-descript">IoT-BLE 5.2 indoor positioning</div>
+                                            <h6 class="job-exp-time">
+                                                <span class="job-start">2020.06</span>
+                                                <span class="job-end">now</span>
+                                            </h6>
+                                            <p class="descript-text">
+                                                <h5 class="text-session">
+                                                <span class="role">Individual weight for the team</span>
+                                                <span class="content">60%</span>
+                                                </h5>
+                                                <h5 class="text-session">
+                                                <span class="content">BLE device owner;</span>
+                                                <span class="content">Lead developer, the main designer of indoor positioning system responsible for design and implementation based on BLE AoA.</span>
+                                                </h5>                                
+                                            </p>
+                                        </div>
+                                        <div class="exp-session">
+                                            <div class="job-descript">IoT-Location tracking watch</div>
+                                            <h6 class="job-exp-time">
+                                                <span class="job-start">2020.05</span>
+                                                <span class="job-end">2020.06</span>
+                                            </h6>
+                                            <p class="descript-text">
+                                                <h5 class="text-session">
+                                                <span class="role">Power manager based on pedometer </span>
+                                                <span class="content">33%</span>
+                                                </h5>
+                                                <h5 class="text-session">
+                                                <span class="content">I have been designed an algorithm to improve the power consumption </span>
+                                                <span class="content">more effectively based on a pedometer on FreeRTOS.</span>
+                                                </h5>                                
+                                            </p>
+                                        </div>
+                                        <div class="exp-session">
                                             <div class="job-descript">Android Linux Display Porting</div>
                                             <h6 class="job-exp-time">
                                                 <span class="job-start">2019.12</span>
-                                                <span class="job-end">now</span>
+                                                <span class="job-end">2020.05</span>
                                             </h6>
                                             <p class="descript-text">
                                                 <h5 class="text-session">
@@ -259,7 +308,7 @@
                                                 <span class="content">10%</span>
                                                 </h5>
                                                 <h5 class="text-session">
-                                                <span class="content">Display owner</span>
+                                                <span class="content">Display owner;</span>
                                                 <span class="content">Product upgrade Android system version where I maintain display driver.</span>
                                                 </h5>                                
                                             </p>
