Fix error and update information

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <li><i class="fab fa-youtube"></i></li>
                     </ul>
                     <ul class="session-buttom-menu">
-                        <li><a href="https://drive.google.com/file/d/1HqBDjorCJ0p9O68ONnFcu8J_f_IFmptd/view?usp=sharing"><i class="fas fa-cloud-download-alt"></i></a></li>
+                        <li><a href="https://drive.google.com/file/d/1t1N9_9gekH6cJsd2Wys2O2uOHeXTAASf/view?usp=sharing"><i class="fas fa-cloud-download-alt"></i></a></li>
                     </ul>
                 </div>
                 <div class="person">
@@ -92,7 +92,7 @@
                                     <h5>IoT</h5>
                                     <div class="skill-content">
                                         <li>
-                                            <h6 class="skill-content-item">BLE 5.2 application develope based on microcontroller</h6>
+                                            <h6 class="skill-content-item">BLE 5.2 application develop based on microcontroller</h6>
                                             <span class="bar"><span class="hidden-expert"></span></span>
                                         </li>
                                         <li>
@@ -254,7 +254,7 @@
                                     <div class="exp-box">
                                         <div class="item-num">1</div>
                                         <div class="logo-group">
-                                        <h5 class="company">FIH Mobile Limited</h5>
+                                        <h5 class="company">FOXCONN - FIH Mobile Limited</h5>
                                         <div class="logo foxconn"></div>
                                         </div>
                                         <h6>
@@ -357,7 +357,7 @@
                                             <span class="exp-end">May 2018</span>
                                         </h6>
                                         <div class="exp-session">
-                                            <div class="job-descript">Archive Linux Server(Full Stack develope)</div>
+                                            <div class="job-descript">Archive Linux Server(Full Stack develop)</div>
                                             <h6 class="job-exp-time">
                                                 <span class="job-start">2017.10</span>
                                                 <span class="job-end">2017.12</span>
@@ -400,10 +400,10 @@
                                         <h6>
                                             <span class="title">Automotive R&D Team Manager</span>
                                             <span class="exp-start">Mar 2015</span>
-                                            <span class="exp-end">Aug 2015</span>
+                                            <span class="exp-end">Jul 2015</span>
                                         </h6>
                                         <div class="exp-session">
-                                            <div class="job-descript">Product of touch locker for automotive</div>
+                                            <div class="job-descript">Automotive touch locker</div>
                                             <h6 class="job-exp-time">
                                                 <span class="job-start">2015.3</span>
                                                 <span class="job-end">2015.8</span>
@@ -419,7 +419,7 @@
                                     <div class="exp-box">
                                         <div class="item-num">5</div>
                                         <div class="logo-group">
-                                        <h5 class="company">Ligitek</h5>
+                                        <h5 class="company">Ligitek Electronics</h5>
                                         <div class="logo ligitek"></div>
                                         </div>
                                         <h6>
