Fix issue on smart phone

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <li><a href="https://drive.google.com/file/d/1t1N9_9gekH6cJsd2Wys2O2uOHeXTAASf/view?usp=sharing"><i class="fas fa-cloud-download-alt"></i></a></li>
                     </ul>
                 </div>
-                <div class="person">
+                <div id="personInfo" class="person">
                     <div class="person_avatar"></div>
                     <div class="person_info">
                         <h3 class="person_name">Weng, Sheng-Hung</h3>
